// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render right thing and don't change unexpected 1`] = `
<div
  aria-expanded={false}
  className="dropdown dropdown--flat dropdown--m"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="combobox"
  style={undefined}
>
  <button
    aria-label="Select one..."
    className="dropdown__button collapse"
    onClick={[Function]}
    onMouseDown={[Function]}
    type="button"
  >
    <span
      className="dropdown__button-text"
      role="textbox"
    >
      Select one...
    </span>
    <span
      className="icon-chevron-down"
    />
  </button>
  <div>
    <ul
      className="dropdown__menu"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      tabIndex={0}
    >
      <li
        aria-selected={undefined}
        className={undefined}
        onClick={[Function]}
        role="option"
        tabIndex={0}
      >
        <a>
          Canada
        </a>
      </li>
      <li
        aria-selected={undefined}
        className={undefined}
        onClick={[Function]}
        role="option"
        tabIndex={0}
      >
        <a>
          China
        </a>
      </li>
      <li
        aria-selected={undefined}
        className={undefined}
        onClick={[Function]}
        role="option"
        tabIndex={0}
      >
        <a>
          Japan
        </a>
      </li>
      <li
        aria-selected={undefined}
        className={undefined}
        onClick={[Function]}
        role="option"
        tabIndex={0}
      >
        <a>
          United States of America
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AppWithFilter should render right thing and don't change unexpected 1`] = `
<div
  aria-expanded={false}
  className="dropdown dropdown--with-search dropdown--flat dropdown--m dropdown--with-search"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="combobox"
  style={undefined}
>
  <button
    aria-label="Select one..."
    className="dropdown__button collapse"
    onClick={[Function]}
    onMouseDown={[Function]}
    type="button"
  >
    <span
      className="dropdown__button-text"
      role="textbox"
    >
      Select one...
    </span>
    <span
      className="icon-chevron-down"
    />
  </button>
  <div>
    <ul
      className="dropdown__menu"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      tabIndex={0}
    >
      <li>
        <div
          className="dropdown__menu__search-box"
        >
          <i
            className="icon-search"
          />
          <input
            aria-label="Search"
            autoComplete="off"
            className="input"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Filter..."
            role="textbox"
            type="text"
          />
        </div>
      </li>
      <li
        className="dropdown__menu-divider"
        role="separator"
      />
      <li
        aria-selected={undefined}
        className={undefined}
        onClick={[Function]}
        role="option"
        tabIndex={0}
      >
        <a>
          Canada
        </a>
      </li>
      <li
        aria-selected={undefined}
        className={undefined}
        onClick={[Function]}
        role="option"
        tabIndex={0}
      >
        <a>
          China
        </a>
      </li>
      <li
        aria-selected={undefined}
        className={undefined}
        onClick={[Function]}
        role="option"
        tabIndex={0}
      >
        <a>
          Japan
        </a>
      </li>
      <li
        aria-selected={undefined}
        className={undefined}
        onClick={[Function]}
        role="option"
        tabIndex={0}
      >
        <a>
          United States of America
        </a>
      </li>
    </ul>
  </div>
</div>
`;
